<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#545958"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/mTxt_Header_topic"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:background="#1e6739"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:maxHeight="50dp"
        android:minHeight="40dp"
        android:text="@string/topic_name_and_subject"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/mTxt_ID"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:background="@color/header001"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/id"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_Header_topic" />

    <TextView
        android:id="@+id/mTxt_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/header001"
        android:maxWidth="150dp"
        android:minWidth="120dp"
        android:text="@string/card_status"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_ID" />

    <TextView
        android:id="@+id/mTxt_Qnumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/header001"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:text="@string/question_no"
        android:textAlignment="textStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBaseline_toBaselineOf="@+id/mTxt_totalQ"
        app:layout_constraintEnd_toStartOf="@+id/mTxt_totalQ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mTxt_totalQ"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/header001"
        android:text="@string/point_0_40"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBaseline_toBaselineOf="@+id/mTxt_cycle"
        app:layout_constraintEnd_toStartOf="@+id/mTxt_cycle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTxt_Qnumber" />

    <TextView
        android:id="@+id/mTxt_cycle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/header001"
        android:text="@string/tried_0_times"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTxt_totalQ"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_level" />


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-2522810443010389/6204125169"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--
    This is main add unit ID:
    ads:adUnitId="ca-app-pub-2522810443010389/6204125169"

     below is the test add
     ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
     -->

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:cardCornerRadius="12dp"
        app:cardElevation="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_PointEachQ">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/questionOption"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTxt_quest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"

                android:paddingTop="2dp"
                android:text="@string/question"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTxt_Qnumber" />

            <CheckBox
                android:id="@+id/mChkOpt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/questionOption"
                android:text="@string/option_one"
                app:layout_constraintBottom_toTopOf="@+id/mChkOpt2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTxt_quest" />

            <CheckBox
                android:id="@+id/mChkOpt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/questionOption"
                android:text="@string/option_two"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@+id/mChkOpt3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mChkOpt1" />

            <CheckBox
                android:id="@+id/mChkOpt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/questionOption"
                android:text="@string/option_three"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="@+id/mChkOpt4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mChkOpt2" />

            <CheckBox
                android:id="@+id/mChkOpt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/questionOption"
                android:text="@string/option_four"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mChkOpt3" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/mTxt_ans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/answer_background"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="@string/answer"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toStartOf="@+id/mTxt_RIGHTvWRONG"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_Qnumber" />

    <TextView
        android:id="@+id/mTxt_RIGHTvWRONG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_sub_design"

        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"

        android:text="@string/check"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toStartOf="@+id/mTxt_PointEachQ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTxt_ans"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_totalQ" />

    <TextView
        android:id="@+id/mTxt_PointEachQ"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_sub_design"
        android:maxWidth="120dp"
        android:minWidth="100dp"

        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"

        android:text="@string/status"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mTxt_RIGHTvWRONG"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_cycle" />


    <Button
        android:id="@+id/mBtn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/answer_background"
        android:text="@string/prev"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_refresh"
        app:layout_constraintEnd_toStartOf="@+id/btn_refresh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/answer_background"
        android:text="@string/refresh"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_next"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_prev" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/answer_background"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_refresh"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/explanation_background"
        android:maxWidth="380dp"
        android:minHeight="100dp"
        android:minWidth="350dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mBtn_submit">

        <TextView
            android:id="@+id/mTxt_Expl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/explanation_is_here"

            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>